# referent_trait

./: CHANGELOG  Cargo.toml  LICENSE-APACHE2  LICENSE-MIT  README.md
src/: lib.rs
tests/: basic.rs  macro.rs  size_and_align.rs
